--- a/EMS.DataAccess/EMS.DataAccess.csproj
+++ b/EMS.DataAccess/EMS.DataAccess.csproj
@@ -7,20 +7,14 @@
   </PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\EMS.Models\EMS.Models.csproj" />
+		<ProjectReference Include="..\EMS.DataAccess\EMS.DataAccess.csproj" />
+		<ProjectReference Include="..\EMS.DataAccess\EMS.Models.csproj" />
+		<ProjectReference Include="..\EMS.Utility\EMS.Utility.csproj" />
 	</ItemGroup>
-
+	
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.6">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.6" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.6">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
   </ItemGroup>
 
 </Project>
