--- a/EMS/EMS.csproj
+++ b/EMS/EMS.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EMS.DataAccess\EMS.DataAccess.csproj" />
-    <ProjectReference Include="..\EMS.Models\EMS.Models.csproj" />
+    <ProjectReference Include="..\EMS.DataAccess\EMS.Models.csproj" />
     <ProjectReference Include="..\EMS.Utility\EMS.Utility.csproj" />
   </ItemGroup>
 
