--- a/EMS.DataAccess/EMS.DataAccess.csproj
+++ b/EMS.DataAccess/EMS.DataAccess.csproj
@@ -6,4 +6,17 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Repository\" />
+  </ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\EMS.Models\EMS.Models.csproj" />
+		<ProjectReference Include="..\EMS.Utility\EMS.Utility.csproj" />
+	</ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
+  </ItemGroup>
+
 </Project>
