--- a/EMS.Utility/EMS.Utility.csproj
+++ b/EMS.Utility/EMS.Utility.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EMS.DataAccess\EMS.DataAccess.csproj" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.3.0" />
   </ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\EMS.Models\EMS.Models.csproj" />
+	</ItemGroup>
 
 </Project>
