--- a/EMS/EMS.csproj
+++ b/EMS/EMS.csproj
@@ -14,6 +14,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\css\style.css" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\EMS.DataAccess\EMS.DataAccess.csproj" />
     <ProjectReference Include="..\EMS.Models\EMS.Models.csproj" />
     <ProjectReference Include="..\EMS.Utility\EMS.Utility.csproj" />
@@ -41,6 +45,10 @@
 	<Folder Include="Helper\" />
 	
 	
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\css\style.css" />
   </ItemGroup>
 
   <ItemGroup>
